unfinished Readme + change of css styles in Flask app

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -13,7 +13,7 @@
         <form action="http://localhost:5000/questions" method="POST">
             <h1>Ready to enjoy your holiday on mountains?</h1>
             <p>Let's start with a short questionnaire to find out avalanche danger for your winter holiday!</p>
-            <input type="submit" value="Start" />
+            <input type="submit" value="Start" style="font-size : 30px" />
         </form>
     </div>
 </body>
