--- a/flask_app/templates/questions.html
+++ b/flask_app/templates/questions.html
@@ -35,7 +35,7 @@
 
                <img src="{{url_for('static', filename='altitude.JPG')}}" align="middle" height="292" width="518" />
 
-               <p><input type="submit" value="submit" /></p>
+               <p><input type="submit" value="submit" style="font-size : 30px"/></p>
            </form>
         </div>
 </body>
