coorection of image name in flask

--- a/flask_app/templates/questions.html
+++ b/flask_app/templates/questions.html
@@ -28,7 +28,7 @@
                <p>How many people will you be travelling with you on mountains? (Insert a number, for no travelmates insert 0) </p>
                <input type="number" name="number of travelmates" min="0" value="0" />
 
-               <img src="{{url_for('static', filename='travelmates.JPG')}}" align="middle" height="292" width="518" />
+               <img src="{{url_for('static', filename='travelmate.jpg')}}" align="middle" height="292" width="518" />
 
                <p>In which altitude level do you plan to spend most time while on mountains? Insert number, for example 2600.</p>
                <input type="number" name="elevation" min="0" value="0" />
