--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" href='/static/css/style.css' />
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href='/static/style.css' /> 
     <div class="bd-example" align="middle">
         <img src="{{url_for('static', filename='first_pic.JPG')}}" align="middle" height="292" width="518" />
-        <form action="http://localhost:5000/questions" method="POST">
+        <form action="/questions" method="POST">
             <h1>Ready to enjoy your holiday on mountains?</h1>
             <p>Let's start with a short questionnaire to find out avalanche danger for your winter holiday!</p>
             <input type="submit" value="Start" style="font-size : 26px" />
